MDEV-22904 Compressed row format table tries to access freed blob

- This is a regression of MDEV-21174(56f6dab1d0e5a464ea49c1e5efb0032a0f5cea3e).
InnoDB resets the BTR_EXTERN_LEN value at wrong offset.